# Cloud-Misconfiguration-Scanner-AWS

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  Makefile  PHASE_0_SCOPE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  README.md  WEBSITE_SCANNER.md  config.yaml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: ci.yml
cloudscan/: __init__.py  aws_client.py  config.py  logger.py  schema.py
cloudscan/cmd/: __init__.py  cloudscan.py
cloudscan/collectors/: __init__.py  base.py  cloudtrail.py  ec2.py  iam.py  manager.py  rds.py  s3.py
cloudscan/compliance/: __init__.py  mappings.py
cloudscan/engine/: __init__.py  context.py  finding.py  rule_engine.py  scoring.py
cloudscan/loaders/: __init__.py  aws_live.py  base.py  file_loader.py  normalize.py
cloudscan/output/: __init__.py  base.py  console.py  html.py  json.py  sarif.py
cloudscan/rules/: __init__.py  base.py  cloudtrail_log_validation_disabled.py  cloudtrail_logging_stopped.py  cloudtrail_no_trail.py  iam_root_mfa.py  (+27 more)
demo/: __init__.py  seed_demo_account.py
examples/: sample-aws-config.json
scripts/: export_aws_config.ps1  export_aws_config.sh
tests/: conftest.py  test_collectors_cloudtrail.py  test_collectors_iam.py  test_compliance.py  test_config.py  test_engine.py  test_file_loader.py  test_integration_moto.py  test_integration_sample_file.py  test_normalize.py  test_output.py  test_output_html.py  test_output_sarif.py  test_rules_cloudtrail.py  test_rules_ec2_extended.py  test_rules_iam.py  test_rules_iam_account.py  test_rules_rds.py  test_rules_rds_extended.py  test_rules_s3.py  test_rules_s3_extended.py  test_rules_sg.py  test_schema.py  test_scoring.py  test_website_scanner_units.py
(+3 files in other folders)
